--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-kperf (0.1.4) noble; urgency=medium
+kperf (0.1.5) jammy; urgency=medium
 
-  * Pass auto test.
+  * Build for each Ubuntu version.
 
  -- kamilu <luzhixing12345@163.com>  Fri, 23 Jan 2026 23:05:00 +0800
